force-app/main/default/objects/Account_Insight_Rule__c/Account_Insight_Rule__c.object-meta.xml
<CustomObject>
    <label>Account Insight Rule</label>
    <nameField>
        <displayFormat>AIR-{0000}</displayFormat>
        <label>Account Insight Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Insight Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>