force-app/main/default/objects/Account_Insight_Rule__c/fields/Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Module_Type__c</fullName>
    <label>Module Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>